--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.11.3",
+    "@types/express": "^4.17.21",
+    "@types/material-ui": "^0.21.17",
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.1",
     "express": "^4.18.3",
+    "material-ui": "^0.20.2",
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
     "next": "14.1.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "next-iron-session": "^4.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
